fix(style): improve responsive layout and fix wrap

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -1,12 +1,23 @@
 body {
-  max-width: 500px;
+  max-width: 75vw;
   margin: 0 auto;
-  padding: 20px;
+  padding: 2vh 0;
   font-family: sans-serif;
+  font-size: 1.5vw;
+}
+
+@media (max-width: 750px) {
+  body {
+    font-size: 3vw;
+  }
 }
 
 .code {
   font-family: monospace;
+}
+
+.element {
+  max-height: 25vw;
 }
 
 .block {
@@ -16,7 +27,7 @@ body {
 .tile {
   display: inline-block;
   background: lightskyblue;
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+  width: 15vw;
+  height: 15vw;
+  border-radius: 3vw;
 }
